<resources>
<!--    <string name="app_name">Ith</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_login">Usuario</string>
    <string name="pass_login">Contraseña</string>
    <string name="forgot_pass_login">¿Olvidó la contraseña?</string>
    <string name="button_login">Iniciar Sesión</string>

    <string name="menu_title">Menú</string>
    <string name="title_activity_responsive">ResponsiveActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Configuración</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="menu_pedido">Pedido</string>
    <string name="menu_logout">Cerrar Sesión</string>

    //Lista de Pedidos
    <string name="list_producto">Lista de Productos</string>
    <string name="send_list">Solicitar Pedido</string>

    //Preferences
    <string name="preferences_file_name">IthPreferences</string>
    <string name="unauthorized_401">Usuario o Contraseña Incorrectas</string>
    <string name="unauthorized">Usuario o CI Incorrecto</string>
    <string name="search_hint">Buscar Producto</string>
    <string name="tipo_categoria">Tipo de Categoría</string>
    <string name="productos">Productos</string>
    <string name="menu_nuevo_pedido">Nuevo Pedido</string>
    <string name="menu_completar_pedido">Completar Pedidos</string>
    <string name="menu_historial_pedido">Historial de Pedidos</string>
    <string name="menu_pedido_a_partir_de_otro">Pedido a partir de otro</string>
    <string name="menu_inicio">Inicio</string>
    <string name="inicio_fragment">Inicio</string>
    <string name="informe_pedido_fragment">Solicitud de Pedido</string>
    <string name="nuevo_pedido_fragment">Nuevo Pedido</string>
    <string name="precio_title">Precio</string>
    <string name="total_pagar_title">Total a Pagar</string>
    <string name="cantidad_producto_title">Cantidad</string>
    <string name="cantidad_producto_despachado_title">Cantidad Despachada</string>
    <string name="cantidad_producto_pedido_title">Cantidad Pedida</string>
    <string name="mis_pedidos">Mis Pedidos</string>
    <string name="list_productos_title">Productos</string>
    <string name="no_title">No.</string>
    <string name="request_date_title">Fecha \nSolicitud</string>
    <string name="processed_date_title">Fecha \nDespacho</string>
    <string name="facturacion_date_title">Fecha \nFacturación</string>
    <string name="delivery_date_title">Fecha de Recogida</string>
    <string name="client_title">Cliente</string>

    //Informe PDF
    <string name="solicitud_pdf">SOLICITUD DE PEDIDO </string>
    <string name="cliente_pdf">Cliente: </string>
    <string name="direccion_pdf">Dirección: </string>
    <string name="negocio_pdf">Negocio: </string>
    <string name="cuenta_pdf">Cuenta: </string>
    <string name="sucursal_pdf">Sucursal: </string>
    <string name="proveedor_pdf">Proveedor: </string>
    <string name="productos_pdf">Relación de Productos </string>
    <string name="numero_pdf">No.</string>
    <string name="referencia_pdf">REFERENCIA</string>
    <string name="um_pdf">U.M.</string>
    <string name="cantidad_pdf">CANTIDAD</string>
    <string name="precio_pdf">PRECIO</string>
    <string name="importe_pdf">IMPORTE</string>
    <string name="descripcion_pdf">DESCRIPCION</string>
    <string name="total_a_pagar_pdf">TOTAL A PAGAR MN</string>
    <string name="elaborado_pdf">ELABORADO POR</string>
    <string name="recibido_pdf">RECIBIDO POR</string>
    <string name="nombre_pdf">Nombre:</string>
    <string name="firma_pdf">Firma: </string>
    <string name="fecha_pdf">Fecha: </string>
    <string name="cargo_pdf">Cargo: </string>
    <string name="ci_pdf">CI: </string>
    <string name="success_build_pdf">Se ha generado exitosamente un documento PDF con el informe del pedido</string>
    <string name="success_solicitud_pedido">La solicitud se ha realizado correctamente</string>
    <string name="fecha_pedido">Fecha</string>
    <string name="cliente_pedido">Cliente</string>

    //Detalle del Pedido
    <string name="detalle_pedido_no_pedido">Número de Pedido:</string>
    <string name="detalle_pedido_proveedor_empresa">Proveedor:</string>
    <string name="detalle_pedido_palco">PALCO</string>
    <string name="detalle_pedido_codigo">Código:</string>
    <string name="detalle_pedido_direccion">Dirección:</string>
    <string name="detalle_pedido_cliente">CLIENTE</string>
    <string name="detalle_pedido_cuenta">Cuenta Bancaria:</string>
    <string name="detalle_pedido_sucursal">Sucursal:</string>
    <string name="detalle_pedido_importe_total">IMPORTE TOTAL </string>


    //Mis Pedidos Opc1
    <string name="detalle_pedido">Detalle del Pedido</string>
    <string name="pedidos_opc1">Pedidos:</string>
    <string name="fecha_inic_opc1">De:</string>
    <string name="fecha_fin_opc1">Hasta:</string>

    //Opc2
    <string name="pedidos_entreg_opc2">Pedidos sin entregar </string>
    <string name="pedidos_proces_opc2">Pedidos sin despachar: </string>
    //Mis Pedidos Opc3
    <string name="pedidos_opc3">Pedidos Procesados:</string>
    //Mis Pedidos Opc4
    <string name="pedidos_opc4">Pedidos Entregados:</string>
    //Pedidos Opc5
    <string name="pedidos_opc5">Pedidos Cancelados:</string>


    //Cambiar Contraseña
    <string name="cambiar_pass">Cambiar Contraseña</string>
    <string name="descripcion_cambiar_pass">Se recomienda usar una contraseña segura que no uses para ningún otro sitio</string>
    <string name="current_pass">Contraseña actual</string>
    <string name="new_pass">Contraseña nueva</string>
    <string name="new_pass_two">Vuelve a escribir la contraseña nueva</string>
    <string name="ci">Carnet de Identidad</string>
    <string name="ci_no_valido">Carnet de Identidad no válido</string>

    <string name="aceptar_dialog">Aceptar</string>
    <string name="save_dialog">Guardar Cambios</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="msg_change_pass_dialog">Cambiando contraseña...</string>ment
    <string name="success_pass_dialog">La contraseña se cambió de forma exitosa</string>
    <string name="edit_text_empty">Complete este campo</string>
    <string name="credentials_empty">No pueden existir campos vacios</string>
    <string name="compare_pass_new">Debe introducir la misma contraseña dos veces para confirmarla </string>

    //Productos
    <string name="productos_menu">Productos</string>
    <string name="productos_existentes_opc_menu">Existentes</string>
    <string name="productos_existencia">Existencia</string>
    <string name="productos_disponible">Disponibilidad</string>
    <string name="productos_existentes">Productos Existentes</string>
    <string name="productos_cant_pedida">Cant. Pedida</string>
    <string name="productos_cant_servida">Cant. Servida</string>
    <string name="productos_cant_necesaria">Cant. Necesaria</string>
    <string name="productos_importe">Importe</string>

    <string name="completar_pedido">Completar Pedido </string>

</resources>